<resources>
    <string name="app_name">Tugas_Modul3</string>
    <string name="deskripsi">Creating a sustainable lifestyle is a meaningful journey and requires the active involvement of every individual. One practical step that can be taken is to understand the impact of every daily action on the environment and look for ways to reduce our ecological footprint. This can start from small decisions such as reducing the use of single-use plastics, choosing eco-friendly products, or recycling waste.\nThe second step that can be taken is to adopt a more thoughtful consumption pattern. This involves choosing products that are durable and recyclable, and avoiding waste. Understanding the life cycle of products, from production to disposal, helps us make more conscious and sustainable choices. In addition, supporting manufacturers and brands that are committed to environmentally friendly production and distribution practices can also have a big impact.</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="username">Username</string>
    <string name="log_in">Log In</string>
    <string name="natinal_park_yosemite">Natinal Park Yosemite</string>
    <string name="california">California</string>
    <string name="ubud_s_hotel">Ubud,s Hotel</string>
    <string name="_50">50</string>
    <string name="_5_0">5.0</string>
    <string name="national_park_yosemite">National Park Yosemite</string>
    <string name="halo_devi">Halo, Devi</string>
    <string name="let_s_discover">Let\'s Discover</string>
    <string name="hot_places">Hot Places</string>
    <string name="see_all">See All</string>
    <string name="best_hotels">Best Hotels</string>
    <string name="creating_a_sustainable_lifestyle_is_a_meaningful_journey_and_requires_the_active_involvement_of_every_individual_one_practical_step_that_can_be_taken_is_to_understand_the_impact_of_every_daily_action_on_the_environment_and_look_for_ways_to_reduce_our_ecological_footprint_this_can_start_from_small_decisions_such_as_reducing_the_use_of_single_use_plastics_choosing_eco_friendly_products_or_recycling_waste_the_second_step_that_can_be_taken_is_to_adopt_a_more_thoughtful_consumption_pattern_this_involves_choosing_products_that_are_durable_and_recyclable_and_avoiding_waste_understanding_the_life_cycle_of_products_from_production_to_disposal_helps_us_make_more_conscious_and_sustainable_choices_in_addition_supporting_manufacturers_and_brands_that_are_committed_to_environmentally_friendly_production_and_distribution_practices_can_also_have_a_big_impact">Creating a sustainable lifestyle is a meaningful journey and requires the active involvement of every individual. One practical step that can be taken is to understand the impact of every daily action on the environment and look for ways to reduce our ecological footprint. This can start from small decisions such as reducing the use of single-use plastics, choosing eco-friendly products, or recycling waste. The second step that can be taken is to adopt a more thoughtful consumption pattern. This involves choosing products that are durable and recyclable, and avoiding waste. Understanding the life cycle of products, from production to disposal, helps us make more conscious and sustainable choices. In addition, supporting manufacturers and brands that are committed to environmentally friendly production and distribution practices can also have a big impact.</string>
</resources>