<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".MainActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/greeting_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:text="@string/halo_devi"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="22dp"
            android:src="@drawable/icon_hello"
            app:layout_constraintStart_toEndOf="@+id/greeting_text"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/profil"
            app:layout_constraintBottom_toBottomOf="@+id/greeting_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/greeting_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/greeting_subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/let_s_discover"
            android:fontFamily="@font/quicksand"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/greeting_text"
            app:layout_constraintTop_toBottomOf="@+id/greeting_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rv_horizontal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hot_places"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/greeting_subtext"
            app:layout_constraintTop_toBottomOf="@+id/greeting_subtext" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_place_horizontal"
            android:background="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_horizontal_title"
            tools:listitem="@layout/item_place_horizontal"
            tools:orientation="horizontal" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rv_vertical_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/best_hotels"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/rv_horizontal_title"
            app:layout_constraintTop_toBottomOf="@+id/rv_place_horizontal" />

        <TextView
            android:id="@+id/btnChangeRV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/see_all"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/rv_vertical_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rv_vertical_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_place"
            android:background="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_vertical_title"
            app:layout_constraintVertical_bias="1.0"
            app:spanCount="2"
            tools:listitem="@layout/item_place_grid" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>